/*
 *  File:				BayesActMessage.proto
 *  Created by:			Luyuan Lin
 *  Created:			March 2014
 *  Last Modified:		March 2014
 *  Last Modified by:	Luyuan Lin
 * 
 *  Define a client communicate with the BayesAct engine.
 */
 
 package EHwA;
 
 message BayesActRequest {
  required double evaluation = 1;
  required double potency = 2;
  required double activity = 3;
  required int32 handAction = 4;
 }
 
 message BayesActRespond {
  required double evaluation = 1;
  required double potency = 2;
  required double activity = 3;
  required int32 prompt = 4;
 }

 
